# rustsync

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/cron/: mod.rs
src/logger/: log.rs
src/structdir/: backup_struct.rs  mod.rs
