[package]
name = "rustsync"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3"
tar = "0.4"
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.9"
cron = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
